[package]
name = "proxy-wasm-rust-rate-limiting"
version = "0.1.0"
authors = ["Hisham Muhammad <hisham@gobolinux.org>"]
edition = "2018"

[lib]
path = "src/filter.rs"
crate-type = ["cdylib"]

[dependencies]
proxy-wasm = "0.2"
log = "0.4"
serde-json-wasm = "0.5.0"
serde = { version = "*", features = ["derive"] }
chrono = "0.4"
phf = { version = "0.11", features = ["macros"] }
